1.20.6 update draft (#246)
* Update Gradle and dependencies

* Craftbukkit classes are no longer relocated into a versioned package

* Change enchantment categories to tags + remove rarity

* Change smithing event using NBT to components + update some functions

* HACK remove unused NBT parse

* Use a fork of shadow plugin supporting Java 21

* Update Particles and vanilla Enchantments name in vane-enchantments

* Import org.json as API in build file

* Update more particle names

* Fix speedwalk config field name

* Use Adventure sendResourcePacks

* Use UUID for resource pack based on hash + HACK add prompt to pack request

* Resource pack prompt has been fixed in Paper

* Use components with ItemUtils' itemstack_from_string + set North compass to track lodestone

* Update resource pack version

* Catch the good exception in ItemUtil

* Get resource pack UUID from properties or config

* Don't send custom enchantments to client