@@ -1,14 +1,15 @@
 package org.oddlama.vane.util;
 
-import org.json.JSONException;
-import org.json.JSONObject;
-
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.Reader;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
+
+import org.json.JSONException;
+import org.json.JSONObject;
 
 public class IOUtil {
 	private static String read_all(Reader rd) throws IOException {
@@ -20,9 +21,9 @@ public class IOUtil {
 		return sb.toString();
 	}
 
-	public static JSONObject read_json_from_url(String url) throws IOException, JSONException {
+	public static JSONObject read_json_from_url(String url) throws IOException, JSONException, URISyntaxException {
 		try (final var rd = new BufferedReader(
-				new InputStreamReader(new URL(url).openStream(), StandardCharsets.UTF_8))) {
+				new InputStreamReader(new URI(url).toURL().openStream(), StandardCharsets.UTF_8))) {
 			return new JSONObject(read_all(rd));
 		}
 	}
